# Pentaract

./: .editorconfig  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: docker-image.yml
deploy/postgres/: init.sql
pentaract/: Cargo.toml  rust-toolchain.toml
pentaract/src/: config.rs  errors.rs  main.rs  server.rs  startup.rs  storage_manager.rs
pentaract/src/common/: access.rs  channels.rs  constants.rs  helpers.rs  jwt_manager.rs  mod.rs  password_manager.rs  types.rs
pentaract/src/common/db/: errors.rs  mod.rs  pool.rs
pentaract/src/common/routing/: app_state.rs  mod.rs
pentaract/src/common/routing/middlewares/: auth.rs
pentaract/src/common/telegram_api/: bot_api.rs  mod.rs  schemas.rs
pentaract/src/models/: access.rs  file_chunks.rs  files.rs  mod.rs  storage_workers.rs  storages.rs  users.rs
pentaract/src/repositories/: access.rs  files.rs  mod.rs  storage_workers.rs  storages.rs  users.rs
pentaract/src/routers/: auth.rs  files.rs  mod.rs  storage_workers.rs  storages.rs  users.rs
pentaract/src/routing/: mod.rs
pentaract/src/schemas/: access.rs  auth.rs  files.rs  mod.rs  storage_workers.rs  storages.rs  users.rs
pentaract/src/services/: auth.rs  files.rs  mod.rs  storage_manager.rs  storage_workers.rs  storage_workers_scheduler.rs  storages.rs  users.rs
pentaract/src/templates/: login.rs  mod.rs
pentaract/src/templates/files/: list.rs  mod.rs  upload_form.rs  upload_to_form.rs
pentaract/src/templates/storage_workers/: create_form.rs  index.rs  list.rs  mod.rs
pentaract/src/templates/storages/: create_form.rs  id.rs  index.rs  mod.rs
pentaract/templates/: base.html  base.jinja  logged_in_base.html  logged_in_base.jinja  login.html  login.jinja
pentaract/templates/files/: list.html  list.jinja  list_item.jinja  upload_button.jinja  upload_form.jinja  upload_to_form.jinja
pentaract/templates/storage_workers/: create_form.html  index.html  index.jinja  list.html  list.jinja
pentaract/templates/storages/: create_form.jinja  id.html  id.jinja  index.html  index.jinja  list.html  list.jinja
ui/: .prettierrc  index.html  package.json  pnpm-lock.yaml  vite.config.js
ui/libs/: index.js  index.ts
ui/src/: App.jsx  App.tsx  index.css  index.jsx  index.tsx
ui/src/api/: index.js  index.ts  request.js  request.ts  types.ts
ui/src/common/: auth_guard.js  size_converter.js
ui/src/components/: Access.jsx  AccessTypeChip.jsx  ActionConfirmDialog.jsx  AlertStack.jsx  AppIcon.jsx  CreateFolderDialog.jsx  DeleteConfirmDialog.jsx  FSListItem.jsx  FileInfo.jsx  GrantAccess.jsx  Header.jsx  Menu.jsx  NavBar.jsx  NavBarSideBarItem.jsx  SideBar.jsx  SideBarItem.jsx
ui/src/layouts/: Basic.jsx
ui/src/pages/: 404.jsx  Home.jsx  Login.jsx  Login.tsx  (+1 more)
(+6 files in other folders)
