[package]
name = "pentaract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers", "tracing"]}
tokio = { version = "1.33.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["trace"], default_features = false }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]} 

sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "any", "postgres"] }

thiserror = "1.0.50"

uuid = { version = "1.5.0", features = ["serde", "v4"] }
